chore: eslint 설치
eslint 설치
eslint airbnb style guide 적용
express 관련 모듈 설치

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,10 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
