chore: webpack 빌드 디렉토리 설정 변경, package.json 스크립트 추가
- webpack 빌드 디렉토리 backend/public으로 설정
- package.json 스크립트 build, lint:fix 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "build": "webpack",
+    "lint:fix": "eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
