feature : 이슈리스트에 스타일링 적용
라벨에 스타일링 적용 및 현재 시간과 비교하여 상대시간 출력

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
