--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
